--- a/src/Login.css
+++ b/src/Login.css
@@ -1,4 +1,7 @@
+
 h1 {
+    font-family:cursive;
+    font-style: italic;
     position: absolute;
     font-size: 50px;
     top: 5%;
@@ -23,22 +26,20 @@ h1:hover::after{
 }
 
 .boutton {
+    background-color: rgb(98, 192, 98) ;
     padding: 12px;
     position: absolute;
-    background: green;
-    width: fit-content;
-    height: 150px;
-    box-shadow:0 4px 7px rgba(8, 8, 8, 0.689);
-    top : 50%;
+    width: 200px;
+    height: 175px;
+    box-shadow:0 4px 7px rgb(0, 70, 0);
+    top : 40%;
     left: 45%;
 }
 
-.client {
-    height: 30px;
-    PADDING: 25px;
-    PADDING-RIGHT: 8px;
-    PADDING-TOP: 3px;
-    PADDING-BOTTOM: 3px;
+.client{
+    align-items: center;
+    padding: 10%;
+    padding-bottom: 2%;
 }
 
 .client_boutton{
@@ -46,29 +47,31 @@ h1:hover::after{
     width: 150px;
     font-size: large;
     text-align: center;
-    align-items: center;
+    border-radius: 15px;
 }
-  
 .client_boutton:hover {
-    background-color: rgb(0, 56, 0);
+    background-color: rgb(0, 130, 0);
     font-size: large;
+    color: white;
 }
 
+  
 .Restaurateur{
-    height: 30px;
-    PADDING: 25px;
-    PADDING-RIGHT: 8px;
-    PADDING-TOP: 30px;
-    PADDING-BOTTOM: 3px
+    align-items: center;
+    padding: 10%;
+    padding-bottom: 2%;
 }
 
 .Restaurateur_boutton{
     height: 50px;
     width: 150px;
     font-size: large;
+    text-align: center;
+    border-radius: 15px;
 }
 
 .Restaurateur_boutton:hover {
-    background-color: rgb(0, 56, 0);
+    background-color: rgb(0, 130, 0);
     font-size: large;
+    color: white;
 }
