--- a/src/client/Acceuil_client.css
+++ b/src/client/Acceuil_client.css
@@ -1,9 +1,29 @@
-.profil {
+.header {
   position: relative;
-  right: 0%;
-  width: 100px;
+  margin-bottom: 10px;
+  height: 75px;
 }
 
-.h1 {
+.profil {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 65px;
+  z-index: 2;
+}
+
+h1 {
   text-align: center;
+  width: 250px;
+  display: inline-block;
+  margin: 0;
+}
+
+.ligne {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  left: 0;
+  z-index: 1;
 }
