--- a/src/client/Acceuil_client.css
+++ b/src/client/Acceuil_client.css
@@ -13,16 +13,17 @@
 }
 
 h1 {
-  text-align: center;
-  width: 250px;
+  text-align: justify;
+  width: 500px;
   display: inline-block;
   margin: 0;
+  font-style: italic;
 }
 
 .ligne {
   width: 100%;
-  height: 2px;
-  background-color: black;
+  height: 1px;
+  background-color: #86deff;
   position: absolute;
   left: 0;
   z-index: 1;
