--- a/src/categorie/categorie.css
+++ b/src/categorie/categorie.css
@@ -13,8 +13,8 @@
 }
 
 .arrow {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   border-top: 20px solid transparent;
   border-bottom: 20px solid transparent;
   border-left: 20px solid #333;
@@ -24,7 +24,7 @@
   position: fixed;
   top: 50;
   left: -200px;
-  width: 200px;
+  width: 150px;
   height: 100%;
   background-color: transparent;
   transition: all 0.3s ease-in-out;
@@ -53,13 +53,23 @@
 }
 
 .sidebar li:hover {
-  text-size-adjust: 100px;
-  text-align: center;
   background-color: lightgreen;
-  height: 25px;
-  width: 100px;
+  height: 100%;
+  width: 175px;
+  transition: all 0.2s ease-in-out;
 }
 
 .menu {
-  float: right;
+  margin-top: auto;
+  height: 10%;
+  width: 150px;
+}
+
+.menu-titre {
+  opacity: 0;
+}
+
+.menu:hover + .menu-titre {
+  opacity: 1;
+  transition: all 0.2s ease-in-out;
 }
